[gd_scene load_steps=18 format=3 uid="uid://cdbpe5elrdcji"]

[ext_resource type="Script" uid="uid://c0uhr4jpubgm3" path="res://levels/playground.gd" id="1_i0110"]
[ext_resource type="PackedScene" uid="uid://7gv6q50fuutj" path="res://Scenes/Player/player.tscn" id="2_3g3xx"]
[ext_resource type="PackedScene" uid="uid://bgxyenfwy5uc2" path="res://Scenes/Animations/transition_screen.tscn" id="2_gi7rk"]
[ext_resource type="PackedScene" uid="uid://dj26sacnhty4r" path="res://addons/devblocks/blocks/basic_block.tscn" id="3_vgy8s"]
[ext_resource type="PackedScene" uid="uid://byon8rf4c5fnr" path="res://Scenes/Camera/camera_3d.tscn" id="4_o316a"]
[ext_resource type="Shader" uid="uid://d0h7xrbncout8" path="res://Particles/SpecialFX/shaders/new_shader_material.gdshader" id="5_32yag"]
[ext_resource type="PackedScene" uid="uid://bu1sw7htwcjf3" path="res://Prefabs/platform19.tscn" id="6_qcyv2"]
[ext_resource type="PackedScene" uid="uid://ceaaiuq3hqfx8" path="res://Prefabs/platform3.tscn" id="7_qei75"]
[ext_resource type="PackedScene" uid="uid://ccgw2fl1elu5v" path="res://Prefabs/platform7.tscn" id="8_kvamc"]
[ext_resource type="PackedScene" uid="uid://mvbxi5nnguga" path="res://Scenes/Spawner/spawner.tscn" id="9_pgkq7"]
[ext_resource type="PackedScene" uid="uid://bxyhhr1aoonle" path="res://Scenes/Enemies/robot.tscn" id="10_3hvkl"]
[ext_resource type="PackedScene" uid="uid://cr1aki2r5nitp" path="res://UI/In_game_UI.tscn" id="12_jkgk7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6g5uc"]

[sub_resource type="Sky" id="Sky_ivwug"]
sky_material = SubResource("ProceduralSkyMaterial_6g5uc")

[sub_resource type="Environment" id="Environment_l5pxq"]
background_mode = 2
background_color = Color(0.2139, 0.570975, 0.69, 1)
sky = SubResource("Sky_ivwug")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_huyiv"]
shader = ExtResource("5_32yag")
shader_parameter/size = Vector2(3, 2)

[sub_resource type="NavigationMesh" id="NavigationMesh_3vw7n"]
cell_size = 0.03
agent_height = 2.0
agent_radius = 1.0
agent_max_climb = 0.05

[node name="Level2" type="Node3D"]
script = ExtResource("1_i0110")

[node name="transition_screen" parent="." instance=ExtResource("2_gi7rk")]

[node name="InBetweenWaves" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l5pxq")

[node name="Player" parent="." instance=ExtResource("2_3g3xx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.038, 2, -12.762)

[node name="ObstaclesHolder" type="Node3D" parent="."]
transform = Transform3D(2, 1.78814e-07, 0, 3.72529e-08, 5, -9.53674e-07, -1.11759e-08, -2.38419e-07, 30, 12.0086, 2.95161, -0.0307541)

[node name="BasicBlock3" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(1, -8.94071e-08, -8.0519e-15, -7.45058e-09, 1, 9.00593e-08, 3.72529e-10, 7.94729e-09, 0.47217, -9.021, -0.010398, 0.668417)
block_color_group = 3
block_style = 2

[node name="BasicBlock12" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(1, -8.9407e-08, -3.96053e-14, -7.45058e-09, 1, 4.42978e-07, 3.72529e-10, 7.94729e-09, 2.32248, -29.6533, -4.76837e-07, 0.438585)
block_color_group = 3
block_style = 2

[node name="BasicBlock14" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(1, 1.39677e-08, -3.42333e-14, -7.45058e-09, -0.156226, 3.82893e-07, 3.72529e-10, -1.24158e-09, 2.00746, -6.75639, -0.41778, 0.510447)
block_color_group = 3
block_style = 2

[node name="BasicBlock8" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(47.075, -7.10543e-15, 2.11758e-22, -3.34489e-15, 1, 0, 0, 0, 0.12, -5.72972, -3.57628e-07, 1.52386)
block_color_group = 3
block_style = 2

[node name="BasicBlock16" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(19.8112, 0, -0.00523433, 0, 1, 0, 0.864977, 0, 0.119886, -19.2367, -1.78814e-07, 0.158877)
block_color_group = 3
block_style = 2

[node name="BasicBlock9" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(-0.451329, -8.9407e-08, 13.3854, -7.98425e-09, 1, -1.85813e-07, -0.0594905, 7.94729e-09, -0.451329, -2.21811, -4.76837e-07, 1.28368)
block_color_group = 3
block_style = 2

[node name="BasicBlock17" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(-0.451329, -8.9407e-08, 13.3854, -7.98425e-09, 1, -1.85813e-07, -0.0594905, 7.94729e-09, -0.451329, -15.3426, -5.36442e-07, 0.622002)
block_color_group = 3
block_style = 2

[node name="BasicBlock10" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(-0.00140322, 4.87893e-23, -32.3232, 1.77636e-15, 0.36, -3.55271e-14, 0.133993, -5.10703e-15, -0.338501, -19.908, -0.542035, -0.630856)
block_color_group = 3
block_style = 2

[node name="BasicBlock29" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(0.572748, -1.78814e-08, -5.63938e-16, -4.26732e-09, 0.2, 6.30754e-09, 2.13365e-10, 1.58946e-09, 0.0330696, -26.0704, -0.372373, 1.1698)
block_color_group = 2
block_style = 2

[node name="BasicBlock36" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(2, -7.08158e-08, -1.01117e-14, -1.49012e-08, 0.792062, 1.13097e-07, 7.45058e-10, 6.29475e-09, 0.592954, -11.949, -0.221928, 1.17891)
block_color_group = 1
block_style = 2

[node name="BasicBlock37" parent="ObstaclesHolder" instance=ExtResource("3_vgy8s")]
transform = Transform3D(0.553996, -1.8148e-08, -6.18461e-16, -4.1276e-09, 0.202982, 6.91738e-09, 2.0638e-10, 1.61316e-09, 0.0362669, 0.471785, -0.451803, 0.61426)
block_color_group = 5
block_style = 2

[node name="DirectionalLight3d" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.966349, 0.250904, -0.0567091, 0.182362, -0.512743, 0.838951, 0.181419, -0.821061, -0.541244, -0.00693703, 59.5145, -109.348)
light_energy = 1.232
light_indirect_energy = 0.884
light_volumetric_fog_energy = 0.768
shadow_enabled = true

[node name="Camera3d" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_o316a")]
transform = Transform3D(1, 0, 0, 0, 0.493942, 0.869495, 0, -0.869495, 0.493942, -39.038, 0, -12.762)
fov = 50.0
target = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera3d"]

[node name="ColorRect" type="ColorRect" parent="Camera3d/CanvasLayer"]
material = SubResource("ShaderMaterial_huyiv")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_3vw7n")

[node name="PlatLarg" parent="NavigationRegion3D" instance=ExtResource("6_qcyv2")]
transform = Transform3D(5, -7.10543e-14, 4.23516e-21, -8.88181e-16, 5, 4.26326e-14, 1.59872e-14, 0, 5, -23.2933, 3.6494, -8.07825)
skeleton = NodePath("../../ObstaclesHolder")

[node name="PlatLarg4" parent="NavigationRegion3D" instance=ExtResource("6_qcyv2")]
transform = Transform3D(5, -1.13687e-13, 5.50571e-21, -8.88181e-16, 5, 4.26326e-14, 2.4869e-14, 0, 5, -41.0464, 0.533391, 34.2911)
skeleton = NodePath("../../ObstaclesHolder")

[node name="PlatLarg2" parent="NavigationRegion3D" instance=ExtResource("6_qcyv2")]
transform = Transform3D(5, -1.13687e-13, 5.50571e-21, -8.88181e-16, 5, 4.26326e-14, 2.4869e-14, 0, 5, -2.94939, 3.90098, -1.45956)
skeleton = NodePath("../../ObstaclesHolder")

[node name="PlatLarg3" parent="NavigationRegion3D" instance=ExtResource("6_qcyv2")]
transform = Transform3D(5, -1.98952e-13, 8.04681e-21, -8.88181e-16, 5, 4.26326e-14, 2.4869e-14, 0, 5, 15.2209, 1.38975, 15.581)
skeleton = NodePath("../../ObstaclesHolder")

[node name="PlatSmol" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -34.2998, 0.874373, -8.46276)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol2" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, -30.1864, 1.74642, -12.4709)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol5" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, -16.8816, 1.74642, -14.2346)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol9" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, -8.70891, 1.74642, -15.0622)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol7" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, 8.98393, 1.74642, 24.1858)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol8" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(-5, 0, -4.37114e-07, 0, 5, 0, 4.37114e-07, 0, -5, -21.3896, 1.74642, 35.808)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol3" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -28.4117, 2.77532, -5.42276)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatSmol6" parent="NavigationRegion3D" instance=ExtResource("7_qei75")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -3.5811, 2.78523, -9.70581)
skeleton = NodePath("../../SpawnHolder")

[node name="PlatMed" parent="NavigationRegion3D" instance=ExtResource("8_kvamc")]
transform = Transform3D(-2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, 2.85241, 0.735149, 30.3228)
skeleton = NodePath("../..")

[node name="PlatMed4" parent="NavigationRegion3D" instance=ExtResource("8_kvamc")]
transform = Transform3D(-2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, -26.6448, 0.735149, 35.5438)
skeleton = NodePath("../..")

[node name="PlatMed2" parent="NavigationRegion3D" instance=ExtResource("8_kvamc")]
transform = Transform3D(-2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, -7.86066, 2.8747, 35.5438)
skeleton = NodePath("../..")

[node name="PlatMed3" parent="NavigationRegion3D" instance=ExtResource("8_kvamc")]
transform = Transform3D(-2.18557e-07, 0, -5, 0, 5, 0, 5, 0, -2.18557e-07, -17.4844, 2.81076, 35.5438)
skeleton = NodePath("../..")

[node name="BasicBlock" parent="NavigationRegion3D" instance=ExtResource("3_vgy8s")]
transform = Transform3D(45.9698, 0, 0, 0, 1, 0, 0, 0, 69.0334, -24.3973, 0, 12.371)

[node name="SpawnHolder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.14141, 0)

[node name="Spawner" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.0823, -6.85565, -15.6146)

[node name="Spawner2" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.8273, -6.85565, -4.79085)
visible = false
Enemy = ExtResource("10_3hvkl")

[node name="Spawner3" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.77438, -6.85565, 24.664)
visible = false
Enemy = ExtResource("10_3hvkl")

[node name="Spawner4" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32.9073, -6.85565, 35.5979)
visible = false
Enemy = ExtResource("10_3hvkl")

[node name="Spawner5" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39.547, -3.79684, 15.7841)
visible = false
Enemy = ExtResource("10_3hvkl")

[node name="Spawner6" parent="SpawnHolder" instance=ExtResource("9_pgkq7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.249627, -3.59588, -0.386105)
visible = false
Enemy = ExtResource("10_3hvkl")

[node name="CanvasLayer" parent="." node_paths=PackedStringArray("player") instance=ExtResource("12_jkgk7")]
player = NodePath("../Player")

[connection signal="timeout" from="InBetweenWaves" to="." method="_on_in_between_waves_timeout"]
